@@ -1,3 +1,7 @@
+Development
+-----------
+- pmount: close an already opened LUKS device if mount failed
+
 0.9.2
 -----
 - Switched version control to bazaar-ng (http://www.bazaar-ng.org);
